Added images directory

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ li a {
 li a:hover {
     color: var(--black);
     font-weight: bold;
-    font-style: italic;
+    text-decoration: underline;
 }
 
 main section{
